components/static-python/route-template.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: static-python-dsp
  labels:
    app: static-python-dsp
    app.kubernetes.io/component: static-python-dsp
    app.kubernetes.io/instance: static-python-dsp
    app.kubernetes.io/name: static-python-dsp
    app.openshift.io/runtime-version: latest
spec:
  host: static-python-dsp-${SUMMIT_PROJECT}.${OCP_APPS_URL}
  to:
    kind: Service
    name: static-python-dsp
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
